# Projection

./: .clangd  CMakeLists.txt  README.md  main.c
include/: classes.h  update.h
src/: circle.c  config.c  init.c  main.c  render.c  update.c  update.cu
src/include/: classes.h  init.h  update.h
src/lib/: circle.c  circles.cu  config.c  cuboid.c  init.c  input.c  line.c  render.c  shaders.cu  update.c
